# ModuWeb

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
controllers/: userController.cc  userController.h
responses/: baseResponse.hpp  userResponse.hpp
